# XENON1T_NikhefProject

./: .gitignore  Ample_size.ipynb  README.md  example-matplotlib.ipynb  gains.ipynb
DataAnalysis/: Correlation.ipynb  FolderIO.py  Hit_pattern-adc_corrected.ipynb  Hit_pattern-uncorrected.ipynb  Improved_NG_position_reconstruction.ipynb  Improved_position_reconstruction.ipynb  NG_data.p  NG_data_new.p  NG_data_single.p  NG_minchannels.p  NG_position_reconstruction.ipynb  NG_sw.p  NG_width.p  New_Peakfinder.ipynb  New_Peakfinder_Zhuoran.ipynb  New_Peakfinder_test.txt  PMT_response.ipynb  Plot for final report.ipynb  README  Ratio_test.ipynb  Record-Copy1.ipynb  Record.ipynb  Rn220_data.p  Rn220_data_new.p  Rn220_data_single.p  Rn220_minchannels.p  Rn220_position_reconstruction.ipynb  Rn220_sw.p  Rn220_width.p  Simulation_hit-map.ipynb  Width.ipynb  XENON1T-PeakID.ipynb  XENON1T-Peakfinder(ver.0)_Zhuoran.ipynb  XENON1T-Peakfinder.ipynb  XENON1T-Waveforms.ipynb  XENON1T-Waveforms_change.ipynb  XENON1T-first-look.ipynb  XENON1T-info.ipynb  XENON1T_Plots_Zhuoran.ipynb  XENON1T_S1-S2-classification_Zhuoran.ipynb  (+10 more)
DataAnalysis/.ipynb_checkpoints/: Correlation-checkpoint.ipynb  Record-checkpoint.ipynb  (+10 more)
Simulation/: README
Simulation/NP-G4_wessel/: Analysis.ipynb  CMakeLists.txt  NP.root  README.md  ourmain.cc  score.mac  test.mac  vis.mac
Simulation/NP-G4_wessel/include/: UltraDetectorMessenger.hh  UserActions.hh  UserRootActions.hh  YourDetectorConstruction.hh
Simulation/NP-G4_wessel/src/: UltraPhysicsList.cc  YourActionInitialization.cc  YourDetectorConstruction.cc
(+42 files in other folders)
